# lazarus

./: .gitattributes  .gitignore  Cargo.toml  Lazarus_Example_Package.laz  README.md  add_bn_tr.sh  flake.nix
.github/workflows/: benchmark.yaml  benchmark.yml  ci.yml  release.yml
benches/: db_benchmark.rs
docs/: LAZ_FORMAT.md
src/: error.rs  main.rs
src/crypto/: mod.rs
src/curriculum/: mod.rs
src/db/: backup.rs  engine.rs  mod.rs  note.rs  package_store.rs  post.rs  post_store.rs  qna.rs  qna_store.rs  wal.rs
src/i18n/: ar.rs  bn.rs  en.rs  es.rs  fa.rs  fr.rs  hi.rs  id.rs  ja.rs  ko.rs  mod.rs  mod.rs.bak  my.rs  pt.rs  ru.rs  sw.rs  tr.rs  yue.rs  zh_cn.rs  zh_tw.rs
src/laz/: mod.rs  reader.rs  writer.rs
src/laz/pkg/: installer.rs  manifest.rs  mod.rs  reader.rs  validator.rs  writer.rs
src/links/: mod.rs
src/search/: mod.rs
src/srs/: extractor.rs  mod.rs
src/sync/: detect.rs  jsonl.rs  manifest.rs  mod.rs  state.rs  usb_packages.rs  watcher.rs
src/web/: middleware.rs  mod.rs  router.rs  state.rs
src/web/handlers/: graph.rs  health.rs  lang.rs  laz.rs  mod.rs  notes.rs  packages.rs  pages.rs  pkg_usb.rs  posts.rs  qna.rs  search.rs  security.rs  srs.rs  sync.rs  usb.rs  wiki.rs
src/zim/: mod.rs
static/: bundle.min.js  header.umd.bundle.min.js  inline-code.umd.bundle.min.js  list.umd.bundle.min.js  manifest.json  marker.umd.bundle.min.js  quote.umd.bundle.min.js  style.css  sw.js
static/data/index/: .managed.json  meta.json
templates/: base.html  editorjs.umd.bundle.min.js  graph.html  index.html  notes_edit.html  notes_list.html  notes_split.html  notes_view.html  posts.html  qna.html  search.html  settings.html  srs_cards.html  srs_review.html  usb.html  wiki_article.html  wiki_manage.html  wiki_no_zim.html  wiki_search.html
zim/data/index/: meta.json
